Fix overflowing vertically by using flexbox layout

--- a/examples/public/stylesheets/graphCanvas.less
+++ b/examples/public/stylesheets/graphCanvas.less
@@ -1,11 +1,15 @@
 .graph-canvas {
+  display: flex;
+  flex-direction: column;
+
   width: 100%;
   height: 100%;
 
   & > .graph {
-    width: 100%;
-    height: 100%;
-    // position: relative;
+    align-self: stretch;
+
+    /* fill remaining space */
+    flex-grow: 1;
   }
 
   ol.breadcrumbs {
@@ -32,6 +36,8 @@
 
   .color-bar {
     height: 10px;
+
+    /* Overridden with inline style except on root*/
     background-color: #2b2b2b;
   }
 
